[metadata]
author = Andrea Telatin
author_email = andrea.telatin@gmail.com
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Bio-Informatics
    Programming Language :: Python :: 3 :: Only
description = Run commands using Kubernetes and Docker containers on CLIMB
download_url = https://github.com/telatin/kuberun
keywords = kubernetes, climb, MRC-CLIMB
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Andrea Telatin
platforms = Linux
maintainer_email = andrea.telatin@gmail.com
name = kuberun
url = https://github.com/telatin/kuberun
version = 0.1.4
python_requires = >3.8

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    importlib-resources>=1.4.0
    pytest>=5.4.3
    xopen>=1.0.1


[aliases]
test = pytest

[tool:pytest]
addopts =
    --doctest-modules
    --doctest-glob="*.md"
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS ALLOW_UNICODE
norecursedirs = .eggs .git *.egg-info build .ropeproject .undodir
testpaths = kuberun/test/test*.py

[pylint]
disable = redefined-builtin,R0915

[flake8]
ignore = E501 E741 E203 W503